(refactor): repositórios, mappers e jpa repo refatorados